# cengine

./: .gitignore  CMakeLists.txt  bounds.c  bounds.h  common.c  common.h  component.c  component.h  debug.c  debug.h  draw_queue.c  draw_queue.h  engine.c  engine.h  fly_camera.c  fly_camera.h  fps_camera.c  fps_camera.h  fps_counter.c  fps_player.c  fps_player.h  game.c  game.h  game_state.c  game_state.h  game_thread.c  game_thread.h  ibl.c  ibl.h  input.c  input.h  main.c  material.c  material.h  mesh.c  mesh.h  model.c  model.h  node.c  node.h  (+30 more)
components/: debug_draw_comp.c  debug_draw_comp.h  mesh_comp.c  mesh_comp.h  trans_comp.c  trans_comp.h
defaults/shaders/: cubemap.frag  cubemap.vert  cubemap_convolution.frag  cubemap_convolution.vert  equirectangular_to_cubemap.frag  equirectangular_to_cubemap.vert  fullscreen.vert  ibl_filtering.frag  pbr.frag  pbr.vert  pbr_old.frag  pbr_old.vert  points_instanced.vert  simple.frag  simple.vert  simple_instanced.frag  simple_instanced.vert
game/: player.c  player.h
libs/osx/: libEGL.dylib  libode.0.16.5.dylib
libs/win/: assimp-vc143-mtd.lib
test/: environment.blend  environment.blend1  environment.fbx  particle.frag  particle.vert  pbr.frag  pbr.vert  point.frag  point.vert  standard.frag  standard.vert
